Added ore generation and removed bismuth items